--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "main": "index.js",
   "repository": "https://github.com/andrefillypesilva/pokemon-project.git",
   "author": "André Fillype Silva",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3"
+  },
+  "scripts": {
+    "dev": "babel ./main.js -o bundle.js -w"
+  }
 }
