--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "repository": "https://github.com/andrefillypesilva/pokemon-project.git",
   "author": "André Fillype Silva",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3"
+    "@babel/preset-env": "^7.10.3",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "dev": "babel ./main.js -o bundle.js -w"
+    "dev": "webpack --mode=development -w"
   }
 }
