--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "jasmine-core": "^3.5.0",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.2",
+    "karma-jasmine": "^3.3.1",
+    "karma-webpack": "^4.0.2"
   },
   "scripts": {
-    "dev": "sass ./public/style.scss ./public/styles/style.css && webpack-dev-server --mode=development"
+    "dev": "sass ./public/style.scss ./public/styles/style.css && webpack-dev-server --mode=development",
+    "test": "karma start karma.config.js"
   }
 }
